--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Tp-Numero2</title>
+  <link rel="stylesheet" href="./estilos/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
-    pdfsdfihsadofha
+  <header class="HeaderIndex">
+    <div class="fondo">
+      <nav class="navbar navbar-expand-lg bg-black">
+  <div class="container-fluid">
+    <img src="/img/Logo.webp" alt="Logo" class="Logo">
+    <a class="navbar-brand text-danger" style="font-size: 50px; text-decoration: underline;" href="#">Gaming News</a>
+     
+    <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active text-danger" aria-current="page" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-danger" href="./html/noticias.html">Noticias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-danger" href="./html/lanzamientos.html">
+            Lanzamientos
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-danger" href="./html/tecnologia.html">Tecnologia</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-danger" href="./html/contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </nav>
+  <section class="textoBajo">
+    <h1 class="text-danger" style="font-size: 50px; margin-top: 50px;">¡Bienvenido a Gaming News!</h1>
+  </section>
+  </header>
+
+  <main>
+    <section>
+      <h2>Bienvenido</h2>
+      <p>
+         Aquí encontrarás todas las noticias y las últimas novedades en videojuegos. Recopilamos cada día y minuto a minuto toda la actualidad del mundo de los videojuegos y sus diferentes plataformas para que siempre estés al corriente de la última actualización o contenido relacionado con tus títulos preferidos, de las fechas de lanzamiento de los juegos más esperados, las noticias más importantes, nuevas imágenes o tráileres y todas las curiosidades del mundillo para mantenerte informado y a la vez entretenido.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      &copy; 2025 Gaming News. Todos los derechos reservados.
+   </p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
