--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gaming News</title>
-  <link rel="stylesheet" href="/estilos/style.css">
+  <link rel="stylesheet" href="../estilos/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="fondo">
       <nav class="navbar navbar-expand-lg bg-black">
   <div class="container-fluid">
-    <img src="/img/Logo.webp" alt="Logo" class="Logo">
+    <img src="../img/Logo.webp" alt="Logo" class="Logo">
     <a class="navbar-brand text-danger" style="font-size: 50px; text-decoration: underline;" href="#">Gaming News</a>
      
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
