--- a/html/lanzamientos.html
+++ b/html/lanzamientos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Reseñas</title>
-  <link rel="stylesheet" href="/estilos/style.css">
+  <link rel="stylesheet" href="../estilos/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="fondo">
       <nav class="navbar navbar-expand-lg bg-black">
   <div class="container-fluid">
-    <img src="/img/Logo.webp" alt="Logo" class="Logo">
+    <img src="../img/Logo.webp" alt="Logo" class="Logo">
     <a class="navbar-brand text-danger" style="font-size: 50px; text-decoration: underline;" href="#">Gaming News</a>
      
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
         <div class="lanzamientos">
 
           <h3 class="text-center">Hollow Knight: Silksong</h3>
-          <img src="/img/Hollow-Knight-Silksong.webp" alt="Hornet Hollow Knight" width="100%">
+          <img src="../img/Hollow-Knight-Silksong.webp" alt="Hornet Hollow Knight" width="100%">
           <p class="text-center">
             Cuando hablamos de los videojuegos más esperados de los últimos años, es una obligación mencionar a Hollow Knight: Silksong. No exageramos, pues el proyecto indie encabezó la lista de los más deseados en Steam por meses y es obvio que los fanáticos ya quieren conocer más información. Por fin hay una luz al final del túnel.
           </p>
