--- a/html/noticias.html
+++ b/html/noticias.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Noticias</title>
-  <link rel="stylesheet" href="/estilos/style.css">
+  <link rel="stylesheet" href="../estilos/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="fondo">
       <nav class="navbar navbar-expand-lg bg-black">
   <div class="container-fluid">
-    <img src="/img/Logo.webp" alt="Logo" class="Logo">
+    <img src="../img/Logo.webp" alt="Logo" class="Logo">
     <a class="navbar-brand text-danger" style="font-size: 50px; text-decoration: underline;" href="#">Gaming News</a>
      
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
         <article class="noticia">
           <h3 class="mt-4">Retraso de Grand Theft Auto VI</h3>
           <div>
-            <img src="/img/gta6.jpg" alt="Foto de gta VI" width="100%">
+            <img src="../img/gta6.jpg" alt="Foto de gta VI" width="100%">
             <p>
               Rockstar Games ha anunciado que GTA VI se lanzará el 26 de mayo de 2026, posponiéndose desde su fecha original prevista para otoño de 2025. La compañía explicó que necesita más tiempo para alcanzar los estándares de calidad esperados por sus jugadores.
             </p>
@@ -66,7 +66,7 @@
       <article class="noticia">
         <h3>Assassin’s Creed Shadows: contenido postlanzamiento</h3>
         <div>
-          <img src="/img/assassins.jpg" alt="Foto de Assassin’s Creed Shadows." width="100%">
+          <img src="../img/assassins.jpg" alt="Foto de Assassin’s Creed Shadows." width="100%">
           <p>
             Ubisoft ha revelado el plan postlanzamiento para el primer año de Assassin’s Creed Shadows, su más reciente entrega. Se incluirán diversas actualizaciones gratuitas y de pago, como la expansión "Las garras de Awaji", gratuita para quienes reservaron el juego.
           </p>
@@ -75,7 +75,7 @@
       <article class="noticia">
         <h3>Lanzamiento de Doom: The Dark Ages</h3>
         <div>
-          <img src="/img/doom-the-dark-ages-doom-slayer-on-a-pile-of-bodies.avif" alt="Foto de Doom: The Dark Ages" width="100%">
+          <img src="../img/doom-the-dark-ages-doom-slayer-on-a-pile-of-bodies.avif" alt="Foto de Doom: The Dark Ages" width="100%">
           <p>
             El 15 de mayo llega Doom: The Dark Ages, una precuela ambientada en la Edad Media que explora los orígenes del Doom Slayer. 
           </p>
