--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="fondo">
       <nav class="navbar navbar-expand-lg bg-black">
   <div class="container-fluid">
-    <img src="/img/Logo.webp" alt="Logo" class="Logo">
+    <img src="./img/Logo.webp" alt="Logo" class="Logo">
     <a class="navbar-brand text-danger" style="font-size: 50px; text-decoration: underline;" href="#">Gaming News</a>
      
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,6 +59,12 @@
     <p>
       &copy; 2025 Gaming News. Todos los derechos reservados.
    </p>
+
+   <img class="logoRedes" src="#" alt="logo instagram">
+   
+   <img class="logoRedes" src="#" alt="logo x">
+   
+   <img class="logoRedes" src="#" alt="logo facebook">
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
