--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-danger" aria-current="page" href="index.html">Inicio</a>
+          <a class="nav-link active text-danger transicion" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-danger" href="./html/noticias.html">Noticias</a>
+          <a class="nav-link text-danger transicion" href="./html/noticias.html">Noticias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-danger" href="./html/lanzamientos.html">
+          <a class="nav-link text-danger transicion" href="./html/lanzamientos.html">
             Lanzamientos
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-danger" href="./html/tecnologia.html">Tecnologia</a>
+          <a class="nav-link text-danger transicion" href="./html/tecnologia.html">Tecnologia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-danger" href="./html/contacto.html">Contacto</a>
+          <a class="nav-link text-danger transicion" href="./html/contacto.html">Contacto</a>
         </li>
       </ul>
     </div>
